--- a/WMS_DEPI_GRAD/Views/Inventory/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/Inventory/Index.cshtml
@@ -229,8 +229,17 @@
                     <div class="modal-body">
 
                         <div class="mb-3">
-                            <label class="form-label">Product Name</label>
-                            <input type="text" name="ProductName" class="form-control" required />
+                            <label class="form-label">Product <span class="text-danger">*</span></label>
+                            <select name="ProductId" class="form-select" required>
+                                <option value="">-- Select Product --</option>
+                                @if (ViewBag.Products != null)
+                                {
+                                    @foreach (var item in ViewBag.Products)
+                                    {
+                                        <option value="@item.Value">@item.Text</option>
+                                    }
+                                }
+                            </select>
                         </div>
 
                         <div class="mb-3">
@@ -240,8 +249,18 @@
                         </div>
 
                         <div class="mb-3">
-                            <label class="form-label">Location (Bin Code)</label>
-                            <input type="text" name="Location" class="form-control" required />
+                            <label class="form-label">Location (Bin Code) <span class="text-danger">*</span></label>
+                            <select name="Location" class="form-select" required>
+                                <option value="">-- Select Bin --</option>
+                                @if (ViewBag.Bins != null)
+                                {
+                                    @foreach (var item in ViewBag.Bins)
+                                    {
+                                        <option value="@item.Value">@item.Text</option>
+                                    }
+                                }
+                            </select>
+                            <div class="form-text">Select the storage bin location</div>
                         </div>
 
                         <div class="mb-3">
