--- a/WMS_DEPI_GRAD/Views/Inventory/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/Inventory/Index.cshtml
@@ -109,9 +109,32 @@
             <div class="col-md-3">
                 <select name="status" class="form-select">
                     <option value="">All Statuses</option>
-                    <option value="Completed" selected="@(ViewBag.Status == "Completed")">Completed</option>
-                    <option value="In-Progress" selected="@(ViewBag.Status == "In-Progress")">In Progress</option>
-                    <option value="Pending" selected="@(ViewBag.Status == "Pending")">Pending</option>
+                    @if (ViewBag.Status == "Completed")
+                    {
+                        <option value="Completed" selected>Completed</option>
+                    }
+                    else
+                    {
+                        <option value="Completed">Completed</option>
+                    }
+                    
+                    @if (ViewBag.Status == "In-Progress")
+                    {
+                        <option value="In-Progress" selected>In Progress</option>
+                    }
+                    else
+                    {
+                        <option value="In-Progress">In Progress</option>
+                    }
+                    
+                    @if (ViewBag.Status == "Pending")
+                    {
+                        <option value="Pending" selected>Pending</option>
+                    }
+                    else
+                    {
+                        <option value="Pending">Pending</option>
+                    }
                 </select>
             </div>
             <div class="col-md-3">
